--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha384-wv6JRBaGc/6gSo9wD0bcWmibdFkga4JehYz0XaqH37NUwD5w2/y4+OrCXaRkfjW" crossorigin="anonymous">
+
 
   <!-- Custom styles for this template-->
   <link href="assets/admin/css/sb-admin-2.min.css" rel="stylesheet">
